# myrient_scraper

./: .gitignore  pyproject.toml
src/: cache.json  test.py
src/myrient_scraper/: __init__.py  cache.py  htmlparser.py  myrient.py
